--- a/wp-content/themes/safedescents/composer.json
+++ b/wp-content/themes/safedescents/composer.json
@@ -28,7 +28,8 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "App\\Controllers\\": "app/controllers/"
     }
   },
   "require": {
@@ -36,7 +37,7 @@
     "composer/installers": "~1.0",
     "illuminate/support": "~5.6",
     "roots/sage-lib": "~9.0.1",
-    "soberwp/controller": "~9.0.0-beta.4"
+    "soberwp/controller": "2.0.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
