Styling the home page

--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -26,6 +26,7 @@
     "extends": "stylelint-config-standard",
     "rules": {
       "no-empty-source": null,
+      "color-hex-case": "upper",
       "at-rule-no-unknown": [
         true,
         {
