--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -27,6 +27,7 @@
     "rules": {
       "no-empty-source": null,
       "color-hex-case": "upper",
+      "no-descending-specificity": null,
       "at-rule-no-unknown": [
         true,
         {
