--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -28,6 +28,7 @@
       "no-empty-source": null,
       "color-hex-case": "upper",
       "no-descending-specificity": null,
+      "selector-list-comma-newline-after": null,
       "at-rule-no-unknown": [
         true,
         {
