--- a/wp-content/themes/safedescents/composer.json
+++ b/wp-content/themes/safedescents/composer.json
@@ -28,8 +28,7 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/",
-      "App\\Controllers\\": "app/controllers/"
+      "App\\": "app/"
     }
   },
   "require": {
@@ -37,7 +36,7 @@
     "composer/installers": "~1.0",
     "illuminate/support": "~5.6",
     "roots/sage-lib": "~9.0.1",
-    "soberwp/controller": "2.0.2"
+    "soberwp/controller": "~2.0.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
