--- a/wp-content/themes/safedescents/composer.json
+++ b/wp-content/themes/safedescents/composer.json
@@ -32,10 +32,11 @@
     }
   },
   "require": {
+    "php": ">=7.1",
     "composer/installers": "~1.0",
     "illuminate/support": "~5.6",
     "roots/sage-lib": "~9.0.1",
-    "soberwp/controller": "2.0.1"
+    "soberwp/controller": "~9.0.0-beta.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
