--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -107,6 +107,7 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
+    "google-geocoder": "^0.2.1",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0",
     "webfontloader": "^1.6.28"
