--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -109,6 +109,7 @@
   "dependencies": {
     "google-geocoder": "^0.2.1",
     "jquery": "^3.3.1",
+    "jquery-validation": "^1.17.0",
     "normalize.css": "^8.0.0",
     "webfontloader": "^1.6.28"
   }
