Adding Flexbox Grid and refactoring homepage, header, footer, claims, and about pages

--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -107,6 +107,7 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
+    "flexboxgrid": "^6.3.1",
     "google-geocoder": "^0.2.1",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
