--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -110,6 +110,7 @@
     "flatpickr": "^4.5.1",
     "flexboxgrid": "^6.3.1",
     "google-geocoder": "^0.2.1",
+    "inputmask": "^4.0.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
     "materialize-css": "^0.100.2",
