--- a/wp-content/themes/safedescents/composer.json
+++ b/wp-content/themes/safedescents/composer.json
@@ -36,7 +36,8 @@
     "composer/installers": "~1.0",
     "illuminate/support": "~5.6",
     "roots/sage-lib": "~9.0.1",
-    "soberwp/controller": "9.0.0-beta4"
+    "soberwp/controller": "9.0.0-beta4",
+    "stripe/stripe-php": "^6.15"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
