--- a/wp-content/themes/safedescents/package.json
+++ b/wp-content/themes/safedescents/package.json
@@ -27,28 +27,30 @@
     "rules": {
       "no-empty-source": null,
       "color-hex-case": "upper",
-      "no-descending-specificity": null,
       "selector-list-comma-newline-after": null,
-      "at-rule-no-unknown": [
-        true,
+      "at-rule-no-unknown": null,
+      "no-descending-specificity": null,
+      "font-family-no-missing-generic-family-keyword": null,
+      "function-linear-gradient-no-nonstandard-direction": null,
+      "at-rule-empty-line-before": [
+        "always",
         {
-          "ignoreAtRules": [
-            "extend",
-            "at-root",
-            "debug",
-            "warn",
-            "error",
-            "if",
-            "else",
-            "for",
-            "each",
-            "while",
-            "mixin",
-            "include",
-            "content",
-            "return",
-            "function",
-            "else"
+          "except": [
+            "blockless-after-same-name-blockless",
+            "first-nested",
+            "after-same-name"
+          ],
+          "ignore": [
+            "after-comment",
+            "blockless-after-blockless"
+          ]
+        }
+      ],
+      "function-name-case": [
+        "lower",
+        {
+          "ignoreFunctions": [
+            "/^DXImageTransform.Microsoft.*$/"
           ]
         }
       ]
